# awawapp

./: .gitignore  README.md  feat-mpv-player.patch  index.html  package-lock.json  package.json  vite.config.ts
.claude/: settings.json
.github/workflows/: release.yml
scripts/: build-cli.sh  bundle-mpv.sh  package-dmg.sh
src/: App.vue  main.ts  types.ts
src-tauri/: .gitignore  Cargo.toml  Info.plist  build.rs  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/dmg-resources/: README.txt  fix-quarantine.sh
src-tauri/icons/: icon.icns
src-tauri/lib/: libmpv-wrapper.dylib
src-tauri/mpv-config/: mpv.conf
src-tauri/mpv-config/script-opts/: uosc.conf
src-tauri/src/: cli.rs  database.rs  lib.rs  main.rs  memory_storage.rs  sparkle.rs  torrent_engine.rs  transcode.rs
src/components/: FileSelector.vue  HistoryPanel.vue  MagnetInput.vue  MpvPlayer.vue  TorrentCard.vue  VideoPlayer.vue
src/locales/: ar.ts  de.ts  en.ts  es.ts  fr.ts  index.ts  it.ts  ja.ts  ko.ts  nl.ts  pl.ts  pt.ts  ru.ts  sv.ts  tr.ts  zh.ts
