[package]
name = "awawapp"
version = "0.1.0"
description = "Torrent streaming app"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "awawapp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Torrent engine
librqbit = { version = "8", features = ["http-api", "tracing-subscriber-utils"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Error handling & utilities
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
dirs = "5"
hex = "0.4"
urlencoding = "2"

# HTTP server for streaming
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }

[dev-dependencies]
tempfile = "3"

