[package]
name = "awawapp"
version = "0.1.0"
description = "Torrent streaming app for macOS"
authors = []
edition = "2021"
default-run = "awawapp"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "awawapp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# CLI binary
[[bin]]
name = "awaw"
path = "src/bin/awaw.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Torrent engine
librqbit = { version = "8", features = ["http-api", "tracing-subscriber-utils"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Error handling & utilities
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5"
hex = "0.4"
urlencoding = "2"
linked-hash-map = "0.5"

# CLI
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
console = "0.15"

# HTTP server for streaming (kept for librqbit compatibility)
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
reqwest = { version = "0.11", features = ["json"] }

# mpv player via JSON IPC
tauri-plugin-mpv = "0.5"

# Window effects
window-vibrancy = "0.5"

[dev-dependencies]
tempfile = "3"

